# jsonschema

./: .coveragerc  .gitignore  README.rst  setup.cfg  tox.ini
docs/: Makefile  conf.py  creating.rst  errors.rst  faq.rst  index.rst  make.bat  references.rst  spelling-wordlist.txt  validate.rst
json/: tox.ini
