[metadata]
name = jsonschemanlplab
url = https://github.com/orenbaldinger/jsonschema-nlplab
project_urls =
    Docs = https://python-jsonschema.readthedocs.io/en/latest/
description = An implementation of JSON Schema validation for Python, forked to avoid dependency issues
long_description = file: README.rst
author = Oren Baldinger
author_email = oren@baldinger.me
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    attrs>=17.4.0
    pyrsistent>=0.14.0
    setuptools
    six>=1.11.0
    functools32;python_version<'3'

[options.extras_require]
format =
    idna
    jsonpointer>1.13
    rfc3987
    strict-rfc3339
    webcolors

[options.entry_points]
console_scripts =
    jsonschemanlplab = jsonschemanlplab.cli:main

[options.package_data]
jsonschemanlplab = schemas/*.json

[flake8]
exclude =
    jsonschemanlplab/__init__.py
    jsonschemanlplab/_reflect.py

[wheel]
universal = 1
